Add email verification with Resend for schedule page security

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,7 @@ MYCARE_PRICE_PRO_HOURLY=price_xxx
 
 # Optional: Stripe Webhook Secret (for production)
 # STRIPE_WEBHOOK_SECRET=whsec_xxx
+
+# Resend (for email verification)
+RESEND_API_KEY=re_your_resend_api_key
+RESEND_FROM_EMAIL=MyCarePA <onboarding@resend.dev>
