--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
+    "resend": "^6.9.2",
     "stripe": "^20.3.1"
   },
   "devDependencies": {
